[project]
name = "agenthub-api"
version = "0.1.0"
description = "AgentHub control-plane API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16.2",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.13",
  "httpx>=0.28.1",
  "langgraph>=1.2.6",
  "pydantic-settings>=2.9.1",
  "redis>=6.2.0",
  "sqlalchemy[asyncio]>=2.0.41",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthub"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
